_includes/css/general.css
/* ... */
.ethics-guidelines {
	padding: 1em;
}

.ethics-guidelines .body-1 {
	text-align: right;

}

.ethics-guidelines .body-2 {
  float: right;
}

/* CONF Proceedings */
.tabs input[type=radio] {
    position: absolute;
    top: -9999px;
    left: -9999px;
}
.tabs {
  list-style: none;
  position: relative;
  padding: 0;
}
.tabs li{
  float: left;
}
.tabs label {
    display: block;
    padding: 0.5em;
    color: #47A4AD;
    font-size: 1em;
    font-weight: normal;
    cursor: pointer;
    position: relative;
    -webkit-transition: all 0.2s ease-in-out;
    -moz-transition: all 0.2s ease-in-out;
    -o-transition: all 0.2s ease-in-out;
    transition: all 0.2s ease-in-out;
}
.tabs label:hover {
  background: #47A4AD;
  top: 0;
  color: #FFF;
}

[id^=tab]:checked + label {
  background: #FFF;
  color: #F48120;
  top: 0;
}

[id^=tab]:checked ~ [id^=tab-content] {
    display: block;
}
.tab-content{
  z-index: 2;
  display: none;
  width: 100%;
  font-size: 1em;
  padding: 0.5em;
  color: #000;
  position: absolute;
  left: 0;
  text-align: center;
  -webkit-animation-duration: 0.5s;
  -o-animation-duration: 0.5s;
  -moz-animation-duration: 0.5s;
  animation-duration: 0.5s;
}

/* NEWS */
.news {
  border-bottom: 1px solid #47A4AD;
  padding-bottom: 1em;
  margin-bottom: 1em;
}

/* RECENTS */
.recent-pg {
  background-color: #FFF;
  padding: 1em!important;
}

.jrecent {
    padding-left: 0;
    border-bottom: 1px solid #47A4AD;
    margin-bottom: 1em;
}

.jrecent:last-child {
  margin-bottom: 0;
}

.jrecent .body {
    padding: 0;
}

.jrecent .body-link:hover {
    border-bottom: none;
    color: #F48120;
    padding: 0;
}

.jname {
    float: left;
    background-color: #47A4AD;
    color: #FFF;
    padding: 0.8em;
    width: 100%;
}

.jname .body {
    font-family: 'Lato', sans-serif;
}

.jcontent {
    padding-left: 0em;
    padding-top: 4em;
}

/* FORM */
.form span {
  display: block;
}

.form input, .form select {
    width: 100%;
}

.form .form_button {
    display: inline-block;
    width: 20%!important;
    border: 0;
    padding: 0.5em;
    background-color: #47A4AD;
    color: #FFF;
    font-family: 'Lato', sans-serif;
    text-transform: uppercase;
    transition: all 0.8s ease;
}

.form .form_button:hover {
    background-color: #F48120;
}

.form .body {
  padding-bottom: 0;
}

.contactform span {
  display: block;
}

.contactform input, .contactform select, .contactform textarea {
    width: 100%;
}

.contactform .form_button {
    display: inline-block;
    width: 30%!important;
    border: 0;
    padding: 0.5em;
    background-color: #47A4AD;
    color: #FFF;
    font-family: 'Lato', sans-serif;
    text-transform: uppercase;
    transition: all 0.8s ease;
}

.contactform .form_button:hover {
    background-color: #F48120;
}

.contactform .body {
  padding-bottom: 0;
}

/* FOOTER */
footer {
  background-color: #c8e1e5;
  color: #47A4AD;
  padding: 1em;
}

footer .grid {
  width: 90%;
  max-width: 1280px;
  margin: 0 auto;
  background-color: transparent;
}

.footer-links {
    margin: 0;
    padding: 0;
}

.footer-links li {
    list-style-type: none;
}

.footer-links a {
	color: #47A4AD;
	text-decoration: none;
	transition: all 0.8s ease;
}

.footer-links a:hover {
	color: #F48120;
}

.social .body {
	padding-top: 1em;
  text-align: left;
}

.copyright {
	text-align: center;
	padding: 0.5em;
	background-color: #47A4AD;
}

.copyright .body {
  font-size: 0.6em;
  text-transform: uppercase;
  font-family: 'Lato', sans-serif;
  letter-spacing: 1px;
  text-align: center;
  color: #FFF;
}

/* IE */
.ie9 .flex-logo {
    width: 70%;
  }

/* 320 PX */
@media only screen and (min-width: 20em) {
	nav#slide-menu {
    right: -194px;
    max-width: 194px;
	}

	#slide-menu a {
    font-size: 0.8em;
	}

	body.menu-active div#content {
    	right: 194px;
	}
}

/* 533 PX */
@media only screen and (min-width: 33em) {
	nav#slide-menu {
    right: -220px;
    max-width: 220px;
	}

	#slide-menu a {
    font-size: 0.8em;
	}

	body.menu-active div#content {
    	right: 220px;
	}
}

/* 768 PX */
@media only screen and (min-width: 48em) {
	.desktop {
		display: block;
	}

	.mobile {
		display: none;
	}

  nav#slide-menu {
    right: -300px;
    max-width: 300px;
  }

  #slide-menu a {
    font-size: 1em;
  }

  body.menu-active div#content {
    right: 300px;
  }

	input.gsc-input {
    	border: 1px solid #F48120!important;
    }

    input.gsc-input {
    	border-color: #F48120!important;
	}

	.cbp-af-header nav a {
    padding: 0 0.5em!important;
	}

  .cbp-af-header {
    height: 140px!important;
  }

	.flex-caption {
    margin: 0 0 0 50px;
    position: absolute;
    top: 0;
    background: rgba(0,0,0,0.65);
    color: #FFF;
    width: 280px;
    font-weight: 100;
    transition: all 0.8s ease;
    height: 100%;
	}

	.flex-caption h2 {
    background-color: #FFF;
    padding: 0.3em 0;
    text-transform: capitalize;
    border-bottom: none;
    display: block;
    font-size: 1.5em;
    margin: 20px 0 0;
    font-weight: 600;
    letter-spacing: 0;
    text-indent: 20px;
}

.flex-caption h2:before {
    content: "";
    background: none;
    width: 0;
    height: 0;
    margin: 0;
}

.flex-caption h3 {
    font-size: 1em;
    color: #F48120;
    padding: 0.5em 20px 0;
}

.flex-caption .body {
    font-size: 0.8em;
    padding: 0 21px 1em;
}

.flex-caption .body-link {
    font-size: 0.8em;
    color: #F48120;
    border-bottom: 1px solid;
}

.journals div {
    margin: 0 1.5px;
    padding-bottom: 1em;
}

.journals {
    padding: 2em;
}
.recent {
    padding: 2em;
}
.ethics-guidelines {
    padding: 2em;
}

.content {
    padding: 2em 0;
}

.form input, .form select {
    width: 50%;
}

footer {
    padding: 2em;
}

.jname {
    float: left;
    background-color: #47A4AD;
    color: #FFF;
    padding: 0.8em;
    width: 100px;
}

.jname .body {
    font-family: 'Lato', sans-serif;
}

.jcontent {
    padding-left: 7em;
    padding-top: 0;
}

h2 {
  font-size: 1.5em;
  }
}
/* ... */

